Fix icons on design page having some weird spacing underneath
And update Duckquill ofc

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -191,6 +191,7 @@
 		display: block;
 		margin: 0;
 		max-width: 100%;
+		width: auto;
 	}
 
 	a {
